# todo

./: .gitignore  Makefile  flake.nix  helper.py  main.py  package.json  pyproject.toml  readme.md  requirements.txt  shell.nix  tailwind.config.js
backend/: alembic.ini  constants.py  main.py
backend/alembic/: env.py
backend/alembic/versions/: 53393955a9fc_add_date.py  5debd8535f1e_baseline.py
backend/sql_app/: crud.py  database.py  models.py  shemas.py
frontend/: .gitignore  package.json  tailwind.config.js  vue.config.js
frontend/src/: App.vue  helper.js  store.js
frontend/src/assets/: index.css
frontend/src/components/: Icon.vue  TodoAddBar.vue  TodoBoard.vue  TodoItem.vue  TodoList.vue
static/: source.css
static/fonts/gilroy/: Gilroy-Bold.eot  Gilroy-Medium.eot
templates/: home.html
templates/macros/: macros.html
website/: constants.py  crud.py  helper.py  main.py  models.py  shemas.py
website/data/: todo.db
website/frontend/: package.json  tailwind.config.js
website/frontend/src/: App.vue
website/frontend/src/assets/: index.css
website/frontend/src/components/: Icon.vue  TodoAddBar.vue  TodoItem.vue  TodoList.vue
website/sql_app/: models.py  shemas.py
website/static/: source.css  style.css
website/templates/: home.html  list.html
website/templates/layouts/: base.html
website/templates/macros/: macros.html
