[tool.poetry]
name = "todo"
version = "0.1.0"
description = ""
authors = ["ddorn <diego.dorn@free.fr>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.63.0"
uvicorn = "^0.13.3"
sqlalchemy = "^2.0.4"
alembic = "^1.9.4"
aiofiles = "^23.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
